--- a/config/crd/resource.sop.huawei.com_oenumas.yaml
+++ b/config/crd/resource.sop.huawei.com_oenumas.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
+    controller-gen.kubebuilder.io/version: (devel)
   name: oenumas.resource.sop.huawei.com
 spec:
   group: resource.sop.huawei.com
@@ -98,6 +98,8 @@ spec:
               replicas:
                 format: int32
                 type: integer
+              updateenable:
+                type: string
             type: object
           status:
             description: |-
